hphp/test/vm/prop-access-error1.php.expectf
HipHop Fatal error: Cannot access protected property C::$p in %s on line 11
